# Gravitii

./: CMakeLists.txt
cmake/: CompilerFlags.cmake
include/gravitii/: app.h  common.h
include/gravitii/physics/: bodies.h  units.h
include/gravitii/utils/: arena.h
src/: main.c
src/gravitii/: app.c
src/gravitii/physics/: bodies.c  units.c
src/gravitii/utils/: arena.c
